<resources>
    <string name="app_name">VolCR</string>
    <string name="UsuarioI">Usuario</string>
    <string name="ContraseñaI">Contraseña</string>
    <string name="btnIniciar">Iniciar Sesión</string>
    <string name="GestionarV">Gestionar Usuarios</string>
    <string name="idadmin">ID</string>
    <string name="Usuarioadmin">Usuario</string>
    <string name="Nombreadmin">Nombre</string>
    <string name="Apeadmin">Apellido</string>
    <string name="Passadmin">Contraseña</string>
    <string name="Rol">Rol (admin/vol)</string>
    <string name="Añadiradmin">Añadir</string>
    <string name="Borraradmin">Borrar</string>
    <string name="Consultaradmin">Consultar</string>
    <string name="GestEvento">Gestionar Evento</string>
    <string name="idadmcal">ID</string>
    <string name="TituloCal">Titulo</string>
    <string name="DesadminCal">Descripción</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora(00:00)</string>
    <string name="Ubicacion">Ubicación</string>
    <string name="AñadiradmCal">Añadir</string>
    <string name="BorraradmCal">Borrar</string>
    <string name="ConsultaradmCal">Consultar</string>
    <string name="Calendario">Calendario</string>
    <string name="GestUsu">Gestionar Usuarios</string>
    <string name="GestEv">Gestionar Eventos</string>
    <string name="VerEv">Lista de Eventos</string>
    <string name="ListaEv">Lista de Eventos</string>
    <string name="AñadirListEv">Añadir</string>
    <string name="ListUsu">Lista de Usuarios</string>
    <string name="MisEv">Mis Eventos</string>
    <string name="VolCal">Calendario</string>
    <string name="MisEvVol">Mis Eventos</string>
    <string name="ListEvVol">Lista de Eventos</string>
    <string name="btnHecho">Hecho</string>
</resources>